--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,5 +1,5 @@
 .menu-item {
-    padding: 0 10px;
+    padding: 1px 20px;
     border-radius: 12px;
-    background-color: #6eda78;
+    background-color: #ffffff;
 }
